# ml-service

./: .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml
app1/: urls.py  views.py
greenGrid/: asgi.py  settings.py  urls.py  wsgi.py
model/: SEMS.ipynb  electrical_Energy.pkl
