[project]
name = "ml-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django-cors-headers>=4.6.0",
    "django>=5.1.3",
    "google-generativeai>=0.8.3",
    "numpy>=2.0.2",
    "python-dotenv>=1.0.1",
    "scikit-learn>=1.5.2",
    "tensorflow>=2.18.0",
]
